# SeanFunctions

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: super-linter.yml
SeanFunctions/: SeanFunctions.py  _version.py  version.py
SeanFunctions_sfayfar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/SeanFunctions/: NeutronScatteringLengths.csv  SeanFunctions.py  __init__.py  _version.py  fitting.py  math.py  scattering.py
src/SeanFunctions/Data/: AtomicFormFactorConstants.csv  NeutronScatteringLengths.csv  NeutronScatteringLengths_Corrected.csv
