[project]
name = "SeanFunctions"
version = "v0.5.4-beta0"
# dynamic = ["version"]
authors = [
  { name="Sean Fayfar", email="sfayfar@gmail.com" },
]
description = "Collection of useful python functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "lmfit",
    "uncertainties",
    "mendeleev"
]

[project.urls]
Homepage = "https://github.com/sfayfar/SeanFunctions"
"Bug Tracker" = "https://github.com/sfayfar/SeanFunctions/issues"


[options]
packages = "find:"
python_requires = ">=3.7"
setup_requires = "setuptools_scm"
package_dir = "src"
include_package_data = "True"
# install_requires = [
#     "numpy",
#     "scipy",
#     "lmfit",
#     "uncertainties",
#     "mendeleev"
# ]


[tool.setuptools.package-data]
"SeanFunctions.Data" = ["*.csv"]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/SeanFunctions/version.py"


[tool.bumpver]
current_version = "v0.5.4-beta0"
version_pattern = "vMAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"src/SeanFunctions/__init__.py" = ['__version__ = "{version}"']
"README.md" = ['{version}']

