[metadata]
name = SeanFunctions
version = 0.0.1
author = Sean Fayfar
author_email = sfayfar@gmail.com
description = Collection of useful python functions
long_description = file: README.md
url = https://github.mit.edu/sfayfar/SeanFunctions/
classifiers = 
    Progamming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm